# ClockNGo

./: CMakeLists.txt  README.md
cmake/: build.cmake
common/contrib/QSsh/: CMakeLists.txt
common/contrib/QSsh/contrib/botan/src/: botan.cpp
common/contrib/QSsh/inc/: QSshUtils.hpp  sshbotanconversions_p.h  sshcryptofacility_p.h  sshkeypasswordretriever_p.h  sshpacketparser_p.h
common/contrib/QSsh/src/: SecureFileUploader.cpp  sshchannel.cpp  sshconnection.cpp  sshcryptofacility.cpp  sshkeyexchange.cpp  sshkeygenerator.cpp  sshremoteprocess.cpp
products/ClockNWork/: CMakeLists.txt
products/ClockNWork/inc/: ClockNWorkEvent.h  ClockNWorkManager.h  ClockNWorkSettings.h  ClockNWorkThread.h  UIClockNWorkConfirm.h  UIClockNWorkSettings.h  UIClockNWorkUpdater.h
products/ClockNWork/resx/: imgLogo.ufo  resources.qrc
products/ClockNWork/src/: ClockNWorkEvent.cpp  ClockNWorkManager.cpp  ClockNWorkSettings.cpp  ClockNWorkThread.cpp  UIClockNWorkConfirm.cpp  UIClockNWorkConfirm.ui  UIClockNWorkSettings.cpp  UIClockNWorkSettings.ui  UIClockNWorkUpdater.cpp  UIClockNWorkUpdater.ui  main.cpp
